--- a/examples/Example8 - Wikidata Subset.ipynb
+++ b/examples/Example8 - Wikidata Subset.ipynb
@@ -219,14 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$kgtk query -i $WIKIDATA_PARTS/all.isa.tsv.gz     --graph-cache $STORE     -o $TEMP/all.isa.Q44.tsv.gz      --match 'isa: (n1)-[l:isa]->(n2:Q44)'     --return 'distinct n1, l.label, n2'\n",
+      "$kgtk query -i $WIKIDATA_PARTS/all.isa.tsv.gz     --graph-cache $STORE     -o $TEMP/qnodelist.Q44.tsv.gz      --match 'isa: (n1)-[l:isa]->(n2:Q44)'     --return 'distinct n1, l.label, n2'\n",
       "\n",
       "\n"
      ]
@@ -235,7 +235,7 @@
    "source": [
     "command = \"$kgtk query -i $WIKIDATA_PARTS/all.isa.tsv.gz \\\n",
     "    --graph-cache $STORE \\\n",
-    "    -o $TEMP/all.isa.NAME.tsv.gz  \\\n",
+    "    -o $TEMP/qnodelist.NAME.tsv.gz  \\\n",
     "    --match 'isa: (n1)-[l:isa]->(n2:NAME)' \\\n",
     "    --return 'distinct n1, l.label, n2'\"\n",
     "run_command(command)"
@@ -243,7 +243,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "node1\tlabel\tnode2\n",
+      "Q2579953\tisa\tQ44\n",
+      "Q15883984\tisa\tQ44\n",
+      "Q63379154\tisa\tQ44\n",
+      "Q3699039\tisa\tQ44\n",
+      "Q3360035\tisa\tQ44\n",
+      "Q16070652\tisa\tQ44\n",
+      "Q85313643\tisa\tQ44\n",
+      "Q897293\tisa\tQ44\n",
+      "Q999745\tisa\tQ44\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gzcat $TEMP/qnodelist.$NAME.tsv.gz | head "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +281,7 @@
     }
    ],
    "source": [
-    "!gzcat $TEMP/all.isa.$NAME.tsv.gz | wc "
+    "!gzcat $TEMP/qnodelist.$NAME.tsv.gz | wc "
    ]
   },
   {
@@ -923,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -952,6 +978,77 @@
     "--order-by 'count(n1) desc' \\\n",
     "--limit 10"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prop\tproperty_label\tvalue\tcount\n",
+      "P3000\t'marriageable age'@en\t+18Q24564698\t56\n",
+      "P2997\t'age of majority'@en\t+18Q24564698\t52\n",
+      "P1279\t'inflation rate'@en\t+1.7Q11229\t41\n",
+      "P2884\t'mains voltage'@en\t+230Q25250\t40\n",
+      "P1279\t'inflation rate'@en\t+1.8Q11229\t38\n",
+      "P1279\t'inflation rate'@en\t+2.1Q11229\t35\n",
+      "P1279\t'inflation rate'@en\t+1.5Q11229\t31\n",
+      "P1279\t'inflation rate'@en\t+2.8Q11229\t31\n",
+      "P1279\t'inflation rate'@en\t+2Q11229\t29\n",
+      "P1279\t'inflation rate'@en\t+3.5Q11229\t28\n"
+     ]
+    }
+   ],
+   "source": [
+    "!$kgtk query -i $OUT/$NAME.part.quantity.tsv.gz -i $OUT/$NAME.label.en.tsv.gz --graph-cache $STORE \\\n",
+    "--match 'quantity: (n1)-[l {label: p}]->(n2), label: (p)-[:label]->(lab)' \\\n",
+    "--return 'distinct l.label as prop, lab as property_label, n2 as value, count(n1) as count' \\\n",
+    "--where 'lab.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
+    "--order-by 'count(n1) desc' \\\n",
+    "--limit 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type\tprop\tvalue\tcount\tproperty_label\n",
+      "Q1066984\tP1343\tQ97879676\t3\t'described by source'@en\n",
+      "Q1066984\tP1343\tQ316838\t2\t'described by source'@en\n",
+      "Q1066984\tP17\tQ154195\t2\t'country'@en\n",
+      "Q1066984\tP17\tQ183\t2\t'country'@en\n",
+      "Q1066984\tP17\tQ2415901\t2\t'country'@en\n",
+      "Q1066984\tP17\tQ256961\t2\t'country'@en\n",
+      "Q1066984\tP17\tQ41304\t2\t'country'@en\n",
+      "Q1066984\tP17\tQ43287\t2\t'country'@en\n",
+      "Q1066984\tP17\tQ713750\t2\t'country'@en\n",
+      "Q1066984\tP17\tQ7318\t2\t'country'@en\n"
+     ]
+    }
+   ],
+   "source": [
+    "!$kgtk query -i $OUT/$NAME.part.wikibase-item.tsv.gz -i $OUT/$NAME.label.en.tsv.gz --graph-cache $STORE \\\n",
+    "--match 'item: (n1)-[l {label: p}]->(n2), item: (n1)-[:P31]->(type), label: (p)-[:label]->(lab)' \\\n",
+    "--return 'distinct type as type, l.label as prop, n2 as value, count(n1) as count, lab as property_label' \\\n",
+    "--where 'lab.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
+    "--order-by 'type, count(n1) desc' \\\n",
+    "--limit 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
