add type to params, example to print help

--- a/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
+++ b/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
@@ -14,30 +14,63 @@
     "-p waf /Users/amandeep/Github/kgtk/data/all.alias.en.tsv.gz \\\n",
     "-p wdf /Users/amandeep/Github/kgtk/data/all.description.en.tsv.gz \\\n",
     "-p inf /Users/amandeep/Github/kgtk/data/statements/valid_edges.tsv \\\n",
-    "-p output_kgtk_folder /Users/amandeep/Github/kgtk/data/statements/output \\\n",
-    "-p output_kgtk_file valid_lad.tsv \\\n",
+    "-p out_folder /Users/amandeep/Github/kgtk/data/statements/output \\\n",
+    "-p out_file valid_lad.tsv \\\n",
     "-p delete_database no\n",
+    "```\n",
+    "\n",
+    "To print a help message and exit:\n",
+    "\n",
+    "```\n",
+    "papermill --help-notebook Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "# path to wiki labels file\n",
-    "wlf='/Users/amandeep/Github/kgtk/data/all.label.en.tsv.gz'\n",
+    "wlf:str='/Users/amandeep/Github/kgtk/data/all.label.en.tsv.gz'\n",
     "# path to wiki alias file\n",
-    "waf='/Users/amandeep/Github/kgtk/data/all.alias.en.tsv.gz'\n",
+    "waf:str='/Users/amandeep/Github/kgtk/data/all.alias.en.tsv.gz'\n",
     "# path to wiki description file\n",
-    "wdf='/Users/amandeep/Github/kgtk/data/all.description.en.tsv.gz'\n",
+    "wdf:str='/Users/amandeep/Github/kgtk/data/all.description.en.tsv.gz'\n",
     "# path to input kgtk edge file\n",
-    "inf='/Users/amandeep/Github/kgtk/data/statements/valid_edges.tsv'\n",
+    "inf:str='/Users/amandeep/Github/kgtk/data/statements/valid_edges.tsv'\n",
     "# output folder path\n",
-    "output_kgtk_folder='/Users/amandeep/Github/kgtk/data/statements/output'\n",
+    "out_folder:str='/Users/amandeep/Github/kgtk/data/statements/output'\n",
     "# output file name\n",
-    "output_kgtk_file='valid_lad.tsv'"
+    "out_file:str='valid_lad.tsv'\n",
+    "# delete previous database\n",
+    "delete_database:str = 'no'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if help and help == 'yes':\n",
+    "    print('Input parameters to run this notebook:')\n",
+    "    print('wlf: path to a kgtk label file, for eg: all.label.en.tsv.gz')\n",
+    "    print('waf: path to a kgtk alias file, for eg: all.alias.en.tsv.gz')\n",
+    "    print('inf: input file path, should be a kgtk edge file')\n",
+    "    print('output_kgtk_folder: output folder path')\n",
+    "    print('output_kgtk_file: output file name, will be created in the output folder')\n",
+    "    print('delete_database: yes|no, delete sqlite3 database or not')\n",
+    "    print('help: yes|no, print this message and exit')\n",
+    "    try:\n",
+    "        raise ('Bye')\n",
+    "    except:\n",
+    "        print(\"That's all\")"
    ]
   },
   {
@@ -105,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if delete_database and delete_database != \"no\":\n",
+    "if delete_database and delete_database.lower() == \"yes\":\n",
     "    print(\"Deleted database\")\n",
     "    !rm $STORE"
    ]
@@ -670,6 +703,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "kgtk_env",
    "language": "python",
