--- a/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
+++ b/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
@@ -54,27 +54,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if help and help == 'yes':\n",
-    "    print('Input parameters to run this notebook:')\n",
-    "    print('wlf: path to a kgtk label file, for eg: all.label.en.tsv.gz')\n",
-    "    print('waf: path to a kgtk alias file, for eg: all.alias.en.tsv.gz')\n",
-    "    print('inf: input file path, should be a kgtk edge file')\n",
-    "    print('output_kgtk_folder: output folder path')\n",
-    "    print('output_kgtk_file: output file name, will be created in the output folder')\n",
-    "    print('delete_database: yes|no, delete sqlite3 database or not')\n",
-    "    print('help: yes|no, print this message and exit')\n",
-    "    try:\n",
-    "        raise ('Bye')\n",
-    "    except:\n",
-    "        print(\"That's all\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -145,23 +124,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run_command(cmd, substitution_dictionary = {}):\n",
-    "    \"\"\"Run a templetized command.\"\"\"\n",
-    "    for k, v in substitution_dictionary.items():\n",
-    "        cmd = cmd.replace(k, v)\n",
-    "    \n",
-    "    print(cmd)\n",
-    "    output = subprocess.run([cmd], shell=True, universal_newlines=True, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
-    "    print(output.stdout)\n",
-    "    print(output.stderr)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -203,6 +165,13 @@
     "!echo $INPUT_FILE_NAME\n",
     "!echo $WIKI_LABEL_NAME\n",
     "!echo $STORE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1: find labels for `node1` in the file"
    ]
   },
   {
