fix param names

--- a/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
+++ b/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
@@ -92,11 +92,11 @@
     "os.environ['WIKI_DESCRIPTION'] = wdf\n",
     "os.environ['WIKI_DESCRIPTION_NAME'] = wdf.split('/')[-1]\n",
     "\n",
-    "os.environ['OUT'] = output_kgtk_folder\n",
-    "os.environ['OUT_FILE'] = output_kgtk_file\n",
+    "os.environ['OUT'] = out_folder\n",
+    "os.environ['OUT_FILE'] = out_file\n",
     "os.environ['kgtk'] = \"time kgtk --debug\"\n",
     "\n",
-    "os.environ['temp'] = f'{output_kgtk_folder}/temp'\n",
+    "os.environ['temp'] = f'{out_folder}/temp'\n",
     "os.environ['STORE'] = \"{}/wikidata.sqlite3.db\".format(os.environ['temp'])"
    ]
   },
@@ -134,10 +134,7 @@
     "        cmd = cmd.replace(k, v)\n",
     "    \n",
     "    print(cmd)\n",
-    "    return cmd\n",
-    "#     output = subprocess.run([cmd], shell=True, universal_newlines=True, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
-    "#     print(output.stdout)\n",
-    "#     print(output.stderr)"
+    "    return cmd"
    ]
   },
   {
