Changes in the qunatity magnitude and units analysis

--- a/examples/Example_9-Wikidata_Subset_Statistics_.ipynb
+++ b/examples/Example_9-Wikidata_Subset_Statistics_.ipynb
@@ -14,8 +14,8 @@
     "\n",
     "### Example Invocation command\n",
     "\n",
-    "    papermill /Users/shashanksaurabh/Desktop/MS/ISI/isi/Profiler/Example_9-Wikidata_Subset_Statistics_.ipynb \\\n",
-    "    /Users/shashanksaurabh/Desktop/MS/ISI/isi/Profiler/Profiler.v2.output.ipynb \\\n",
+    "    papermill /Users/shashanksaurabh/Desktop/MS/ISI/isi/kgtk_shashank73744/kgtk/examples/Example_9-Wikidata_Subset_Statistics_.ipynb \\\n",
+    "    /Users/shashanksaurabh/Desktop/MS/ISI/isi/kgtk_shashank73744/kgtk/examples/Example_9_output.ipynb \\\n",
     "    -p wikidata_home '/Users/shashanksaurabh/Desktop/Data_isi' \\\n",
     "    -p wikidata_parts_folder '/Users/shashanksaurabh/Desktop/Data_isi/Chemical' \\\n",
     "    -p cache_folder '/Users/shashanksaurabh/Desktop/Data_isi/Temp' \\\n",
@@ -108,8 +108,8 @@
     "\n",
     "from IPython.display import display, HTML\n",
     "\n",
-    "import altair as alt\n",
-    "alt.renderers.enable('altair_viewer')\n",
+    "# import altair as alt\n",
+    "# alt.renderers.enable('altair_viewer')\n",
     "\n",
     "# from IPython.display import display, HTML, Image\n",
     "# from pandas_profiling import ProfileReport"
@@ -212,7 +212,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -412,7 +411,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1380,7 +1378,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4682,7 +4679,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4869,7 +4865,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4907,7 +4902,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5071,7 +5065,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5240,7 +5233,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5780,7 +5772,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
