--- a/examples/Example 11 - Find Ambiguous Items.ipynb
+++ b/examples/Example 11 - Find Ambiguous Items.ipynb
@@ -156,7 +156,15 @@
     "if cache_path:\n",
     "    os.environ['STORE'] = \"{}/wikidata.sqlite3.db\".format(cache_path)\n",
     "else:\n",
-    "    os.environ['STORE'] = \"{}/{}/wikidata.sqlite3.db\".format(output_path, temp_folder)"
+    "    os.environ['STORE'] = \"{}/{}/wikidata.sqlite3.db\".format(output_path, temp_folder)\n",
+    "# alias zcat\n",
+    "has_zcat = !command -v zcat\n",
+    "if has_zcat:\n",
+    "    # for linux\n",
+    "    %alias gzcat zcat\n",
+    "else:\n",
+    "    # for mac\n",
+    "    %alias gzcat gzcat"
    ]
   },
   {
@@ -280,7 +288,6 @@
       "$kgtk query -i $WIKIDATA_PARTS/all.isa.tsv.gz -i $TEMP/instance_qnodes.tsv     --graph-cache $STORE     -o $TEMP/qnodelist.iscw.tsv.gz      --match 'instance: ()-[]-(n1), isa: (n1)-[l:isa]->(n2)'     --return 'distinct n1 as node1, l.label as label, n2 as node2'\n",
       "\n",
       "\n",
-      "zcat $TEMP/qnodelist.iscw.tsv.gz | head\n",
       "node1\tlabel\tnode2\n",
       "Q100\tisa\tQ1549591\n",
       "Q100\tisa\tQ21518270\n",
@@ -292,11 +299,9 @@
       "Q1001910\tisa\tQ5\n",
       "Q1002142\tisa\tQ219557\n",
       "\n",
-      "\n",
-      "zcat $TEMP/qnodelist.iscw.tsv.gz | wc\n",
-      "  16584   49752  317660\n",
-      "\n",
-      "\n"
+      "gzip: stdout: Broken pipe\n",
+      "wc -l /home/ktyao/dev/kgtk-cache/iscw-temp/qnodelist.iscw.tsv.gz\n",
+      "16584\n"
      ]
     }
    ],
@@ -307,8 +312,9 @@
     "    --match 'instance: ()-[]-(n1), isa: (n1)-[l:isa]->(n2)' \\\n",
     "    --return 'distinct n1 as node1, l.label as label, n2 as node2'\"\n",
     "run_command(command)\n",
-    "run_command(\"zcat $TEMP/qnodelist.NAME.tsv.gz | head\")\n",
-    "run_command(\"zcat $TEMP/qnodelist.NAME.tsv.gz | wc\")"
+    "%gzcat $TEMP/qnodelist.$NAME.tsv.gz | head\n",
+    "!echo wc -l $TEMP/qnodelist.$NAME.tsv.gz\n",
+    "%gzcat $TEMP/qnodelist.$NAME.tsv.gz | wc -l"
    ]
   },
   {
@@ -428,7 +434,7 @@
     }
    ],
    "source": [
-    "!zcat $OUT/shares_name.$NAME.tsv.gz | wc"
+    "%gzcat $OUT/shares_name.$NAME.tsv.gz | wc"
    ]
   },
   {
@@ -447,15 +453,8 @@
    ],
    "source": [
     "!echo Unique ambiguous Q-nodes\n",
-    "!zcat $OUT/shares_name.$NAME.tsv.gz | awk -F'\\t' '{print $3}' | tail -n +2 | uniq | wc -l"
+    "%gzcat $OUT/shares_name.$NAME.tsv.gz | awk -F'\\t' '{print $3}' | tail -n +2 | uniq | wc -l"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
