--- a/examples/Example 11 - Find Ambiguous Items.ipynb
+++ b/examples/Example 11 - Find Ambiguous Items.ipynb
@@ -57,6 +57,21 @@
     "Q100    'Boston'@en-gb  Q26664318       'Royal Court Theatre, Wigan'@en Pshares_name\n",
     "Q100    'Boston'@en-gb  Q26664318       'The Hub'@en-gb Pshares_name\n",
     "Q100    'Boston'@en-gb  Q27714978       'Bostonia (Boston, Mass. : 1986)'@en    Pshares_name\n",
+    "```\n",
+    "\n",
+    "All qnodes including input qnodes and ambiguous qnodes.\n",
+    "```\n",
+    "$ zcat qnodes_combined.iscw.tsv.gz | head\n",
+    "node1   label   node2\n",
+    "Qiscw   Pcontains_entity        Q100\n",
+    "Qiscw   Pcontains_entity        Q1000\n",
+    "Qiscw   Pcontains_entity        Q1001437\n",
+    "Qiscw   Pcontains_entity        Q1001910\n",
+    "Qiscw   Pcontains_entity        Q1002142\n",
+    "Qiscw   Pcontains_entity        Q1002860\n",
+    "Qiscw   Pcontains_entity        Q1003177\n",
+    "Qiscw   Pcontains_entity        Q1004657\n",
+    "Qiscw   Pcontains_entity        Q1005\n",
     "```"
    ]
   },
@@ -417,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ls $TEMP/shares_name.*.$NAME.tsv.gz | xargs echo \"-i\" | xargs kgtk zconcat | gzip > $OUT/shares_name.$NAME.tsv.gz"
+    "!ls $TEMP/shares_name.*.$NAME.tsv.gz | xargs echo \"-i\" | xargs kgtk cat | gzip > $OUT/shares_name.$NAME.tsv.gz"
    ]
   },
   {
@@ -429,7 +444,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 143904  951132 9511852\r\n"
+      " 143901  951117 9511726\r\n"
      ]
     }
    ],
@@ -447,7 +462,7 @@
      "output_type": "stream",
      "text": [
       "Unique ambiguous Q-nodes\n",
-      "132803\n"
+      "132800\n"
      ]
     }
    ],
@@ -455,6 +470,78 @@
     "!echo Unique ambiguous Q-nodes\n",
     "%gzcat $OUT/shares_name.$NAME.tsv.gz | awk -F'\\t' '{print $3}' | tail -n +2 | uniq | wc -l"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate combined KG of input Q-nodes and ambiguous Q-nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$kgtk query -i $WIKIDATA_PARTS/all.isa.tsv.gz -i $OUT/shares_name.iscw.tsv.gz     --graph-cache $STORE     -o $TEMP/qnodelist_ambiguous.iscw.tsv.gz      --match 'shares: ()-[]-(n1), isa: (n1)-[l:isa]->(n2)'     --return 'distinct n1 as node1, l.label as label, n2 as node2'\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "command = \"$kgtk query -i $WIKIDATA_PARTS/all.isa.tsv.gz -i $OUT/shares_name.NAME.tsv.gz \\\n",
+    "    --graph-cache $STORE \\\n",
+    "    -o $TEMP/qnodelist_ambiguous.NAME.tsv.gz  \\\n",
+    "    --match 'shares: ()-[]-(n1), isa: (n1)-[l:isa]->(n2)' \\\n",
+    "    --return 'distinct n1 as node1, l.label as label, n2 as node2'\"\n",
+    "run_command(command)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kgtk cat -i $TEMP/qnodelist.$NAME.tsv.gz -i $TEMP/qnodelist_ambiguous.$NAME.tsv.gz \\\n",
+    "    | gzip > $OUT/isa_combined.$NAME.tsv.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kgtk query -i $OUT/isa_combined.iscw.tsv.gz     --graph-cache $STORE     -o $OUT/qnodes_combined.iscw.tsv.gz      --match '(n2)-[]->()'     --return 'distinct \"Qiscw\" as node1, \"Pcontains_entity\" as label, n2 as node2'\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "command = \"\"\"kgtk query -i $OUT/isa_combined.NAME.tsv.gz \\\n",
+    "    --graph-cache $STORE \\\n",
+    "    -o $OUT/qnodes_combined.NAME.tsv.gz  \\\n",
+    "    --match '(n2)-[]->()' \\\n",
+    "    --return 'distinct \"QNAME\" as node1, \"Pcontains_entity\" as label, n2 as node2'\"\"\"\n",
+    "run_command(command)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
