--- a/examples/Example_10_Wikidata_Subgraph_Statistics.ipynb
+++ b/examples/Example_10_Wikidata_Subgraph_Statistics.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "### Example Invocation command\n",
     "\n",
-    "    papermill /Users/shashanksaurabh/Desktop/MS/ISI/isi/kgtk_shashank73744/kgtk/examples/Example_10_Wikidata_Subgraph_Statistics \\\n",
+    "    papermill /Users/shashanksaurabh/Desktop/MS/ISI/isi/kgtk_shashank73744/kgtk/examples/Example_10_Wikidata_Subgraph_Statistics.ipynb \\\n",
     "    /Users/shashanksaurabh/Desktop/MS/ISI/isi/kgtk_shashank73744/kgtk/examples/Example_10_output.ipynb \\\n",
     "    -p wikidata_home '/Users/shashanksaurabh/Desktop/Data_isi' \\\n",
     "    -p wikidata_parts_folder '/Users/shashanksaurabh/Desktop/Data_isi/Chemical' \\\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "metadata": {
     "scrolled": false,
     "tags": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 82,
    "metadata": {
     "scrolled": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 83,
    "metadata": {
     "scrolled": false
    },
@@ -117,7 +117,7 @@
     "# Environmnet variable for the two sub folders where the statistics would be stored  \n",
     "os.environ['OVERVIEW_FOLDER'] = os.path.join(output_folder,\"overview_folder\")\n",
     "os.environ['CLASS_FOLDER'] = os.path.join(output_folder,\"classes\")\n",
-    "os.environ['PROPERTY_OVERVIEW'] = os.path.join(output_folder,\"classes\")\n",
+    "os.environ['PROPERTY_OVERVIEW'] = os.path.join(output_folder,\"property_overview\")\n",
     "\n",
     "# kgtk command to run\n",
     "os.environ['kgtk'] = \"kgtk\"\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 84,
    "metadata": {
     "scrolled": false
    },
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 85,
    "metadata": {
     "scrolled": false
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 86,
    "metadata": {
     "scrolled": true
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 87,
    "metadata": {
     "scrolled": false
    },
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 88,
    "metadata": {
     "scrolled": false
    },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 89,
    "metadata": {
     "scrolled": true
    },
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 90,
    "metadata": {
     "scrolled": false
    },
@@ -1581,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 91,
    "metadata": {
     "scrolled": false
    },
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 92,
    "metadata": {
     "scrolled": false
    },
@@ -1624,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 99,
    "metadata": {
     "scrolled": false
    },
@@ -1638,21 +1638,26 @@
     "#df_label: Dataframe corresponding to the label\n",
     "def direct_subclasses(Class,df_wikibase_item,df_label):\n",
     "    result = []\n",
-    "    for i,ele in enumerate(df_wikibase_item[(df_wikibase_item['label']=='P279') & (df_wikibase_item['node2']==Class)]['node1'].remove_duplicates().values.tolist()):\n",
+    "    for i,ele in enumerate(df_wikibase_item[(df_wikibase_item['label']=='P279') & (df_wikibase_item['node2']==Class)]['node1'].values.tolist()):\n",
     "        result.append(label_node(ele,df_label))\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This is a helper function which finds the statistics on the outcoming properties on the instances of the class\n",
+    "# returns a dataframe object with the statistics\n",
+    "#@parameters\n",
+    "#df_class_example: The dataframe object corresponding to the instances of the class\n",
     "def find_properties(df_class_example):\n",
     "    \n",
     "    df_label = pd.read_csv(os.path.join(os.getenv('WIKIDATA_PARTS'),os.getenv('label')),delimiter='\\t')\n",
     "\n",
+    "    #Environment variable corresponding to the statistics of each of the property data type\n",
     "    types = [ \"time\",\n",
     "             \"wikibase_item\",\n",
     "             \"math\",\n",
@@ -1667,38 +1672,60 @@
     "             \"geo_shape\",\n",
     "             \"url\"\n",
     "            ]\n",
+    "    \n",
+    "    #This is a helper function which extract the qnode/pnode from the link\n",
     "    def get_qnodes_from_link(link):\n",
     "        return str(link.split(\"/\")[-1])\n",
     "    \n",
+    "    #This is a helper function checks if the node is present in instance_set or not\n",
     "    def selected_qnode(node):\n",
     "        return node in instance_set\n",
     "    \n",
+    "    #Instance set is the set of all the qnodes of the instances of the class\n",
     "    instance_set = set(list(df_class_example[\"Link\"].map(get_qnodes_from_link)))\n",
     "    \n",
+    "    #This is a helper function which finds the percentage corresponding to the passed value\n",
     "    def find_percent(val):\n",
     "        return round(val*100/number_of_instances,2)\n",
     "    \n",
+    "    # This is a helper function which finds the label for the node\n",
     "    def label_node(node):\n",
     "        for ele in df_label[df_label['node1']==node]['node2']:\n",
     "            if kgtk_lqstring_lang(ele) == \"en\":\n",
     "                return kgtk_lqstring_text(ele)\n",
     "        return node\n",
-    "        \n",
+    "    \n",
+    "    # Number of distinct qnodes in the example set.\n",
     "    number_of_instances = len(instance_set)\n",
+    "    \n",
+    "    # Creating the data frame for the output\n",
     "    df_all_prop = pd.DataFrame([],columns=['id','node1','label','node2'])\n",
     "    for type_ in types:\n",
+    "        \n",
+    "        # Reading the property statistics of the type denoted by 'type_'\n",
     "        df_temp = pd.read_csv(os.path.join(os.getenv('WIKIDATA_PARTS'),os.getenv(type_)),delimiter='\\t')\n",
+    "        \n",
+    "        # Selecting columns in the property statistics\n",
     "        df_temp = df_temp[['node1','label']]\n",
+    "        \n",
+    "        # Finding all the statement which for the instances of the class\n",
     "        df_temp = df_temp[df_temp['node1'].apply(selected_qnode)]\n",
+    "        \n",
     "        df_temp = df_temp.reset_index()\n",
     "        del df_temp[\"index\"]\n",
+    "        \n",
+    "        # Dropping if there are many statements for same instances and same property\n",
+    "        # For example a node can have more than P31 statements\n",
     "        df_temp = df_temp.drop_duplicates()\n",
     "        df_all_prop = pd.concat([df_all_prop,df_temp])\n",
     "    df_all_prop = df_all_prop.reset_index()\n",
     "    \n",
+    "    # Finding the count for each of the properties\n",
     "    df_all_prop = df_all_prop['label'].value_counts()\n",
     "    df_all_prop = df_all_prop.reset_index()\n",
     "    df_all_prop.columns = [\"Property Name\",\"Instances\"]\n",
+    "    \n",
+    "    # Finding the Percent\n",
     "    df_all_prop[\"% Instances\"] = df_all_prop[\"Instances\"].map(find_percent)\n",
     "    df_all_prop[\"Property Name\"] = df_all_prop[\"Property Name\"].map(label_node)\n",
     "\n",
@@ -1707,43 +1734,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This is a helper function which finds the statistics on the incoming properties on the instances of the class\n",
+    "# returns a dataframe object with the statistics\n",
+    "#@parameters\n",
+    "#df_class_example: The dataframe object corresponding to the instances of the class\n",
     "def find_properties_incoming(df_class_example):\n",
     "    \n",
     "    df_label = pd.read_csv(os.path.join(os.getenv('WIKIDATA_PARTS'),os.getenv('label')),delimiter='\\t')\n",
     "\n",
+    "    #Environment variable corresponding to the statistics of each of the property data type\n",
+    "    # Here wikibase_item is only relevant because it only has node2 as wikibase-item.\n",
     "    types = [\n",
     "             \"wikibase_item\"\n",
     "            ]\n",
+    "    \n",
+    "    #This is a helper function which extract the qnode/pnode from the link\n",
     "    def get_qnodes_from_link(link):\n",
     "        return str(link.split(\"/\")[-1])\n",
     "    \n",
+    "    #This is a helper function checks if the node is present in instance_set or not\n",
     "    def selected_qnode(node):\n",
     "        return node in instance_set\n",
     "    \n",
+    "    #Instance set is the set of all the qnodes of the instances of the class\n",
     "    instance_set = set(list(df_class_example[\"Link\"].map(get_qnodes_from_link)))\n",
     "    \n",
+    "    # This is a helper function which finds the label for the node\n",
     "    def label_node(node):\n",
     "        for ele in df_label[df_label['node1']==node]['node2']:\n",
     "            if kgtk_lqstring_lang(ele) == \"en\":\n",
     "                return kgtk_lqstring_text(ele)\n",
     "        return node\n",
     "        \n",
+    "    # Number of distinct qnodes in the example set.\n",
     "    number_of_instances = len(instance_set)\n",
+    "    \n",
+    "    # Creating the data frame for the output\n",
     "    df_all_prop = pd.DataFrame([],columns=['id','node1','label','node2'])\n",
     "    for type_ in types:\n",
+    "        \n",
+    "        # Reading the property statistics of the type denoted by 'type_'\n",
     "        df_temp = pd.read_csv(os.path.join(os.getenv('WIKIDATA_PARTS'),os.getenv(type_)),delimiter='\\t')\n",
+    "        \n",
+    "        # Selecting columns in the property statistics\n",
     "        df_temp = df_temp[['node2','label']]\n",
+    "        \n",
+    "         # Finding all the statement which for the instances of the class\n",
     "        df_temp = df_temp[df_temp['node2'].apply(selected_qnode)]\n",
     "        df_temp = df_temp.reset_index()\n",
     "        del df_temp[\"index\"]\n",
+    "        \n",
+    "        # Dropping if there are many statements for same instances and same property\n",
+    "        # For example a node can have more than P31 statements\n",
     "        df_temp = df_temp.drop_duplicates()\n",
     "        df_all_prop = pd.concat([df_all_prop,df_temp])\n",
     "    df_all_prop = df_all_prop.reset_index()\n",
     "    \n",
+    "    # Finding the count for each of the properties\n",
     "    df_all_prop = df_all_prop['label'].value_counts()\n",
     "    df_all_prop = df_all_prop.reset_index()\n",
     "    df_all_prop.columns = [\"Property Name\",\"Instances\"]\n",
@@ -1754,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 102,
    "metadata": {
     "scrolled": false
    },
@@ -1878,13 +1929,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1055956\n"
-     ]
     },
     {
      "data": {
@@ -2201,13 +2245,6 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2505\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -2522,13 +2559,6 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "484\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -2801,13 +2831,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "479\n"
-     ]
     },
     {
      "data": {
@@ -3116,13 +3139,6 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "410\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -3416,7 +3432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -3530,6 +3546,8 @@
    "source": [
     "try:    \n",
     "    printmd('Property Overview','blue')\n",
+    "    \n",
+    "    # List of all the datatypes for the property and their tile.\n",
     "    types = [\n",
     "            (\"property_summary_time\",\"Time\"),\n",
     "            (\"property_summary_wikibase_item\", \"Wikibase Item\"),\n",
@@ -3545,25 +3563,37 @@
     "            (\"property_summary_geo_shape\", \"Geo Shape\"),\n",
     "            (\"property_summary_url\",  \"URL\")\n",
     "        ]\n",
+    "    \n",
+    "    # Create a new Dataframe to store the result.\n",
     "    df_all_prop = pd.DataFrame([],columns=[\"Property_Label\",\"Number_of_Statements\",\"Link\"])\n",
+    "    \n",
+    "    # For all types of the properties\n",
     "    for type_, type_name in types:\n",
+    "        \n",
+    "        # Read the file generated above while calculating the statistics\n",
     "        df_temp = pd.read_csv(os.path.join(os.getenv('OVERVIEW_FOLDER'),os.getenv(type_)),delimiter='\\t')\n",
+    "        \n",
+    "        # Adding the column for the data type\n",
     "        df_temp[\"Property Type\"] = type_name\n",
+    "        \n",
+    "        # Concatenating the data frame\n",
     "        df_all_prop = pd.concat([df_all_prop,df_temp])\n",
     "        df_all_prop = df_all_prop.sort_values(\"Number_of_Statements\",ascending=False).reset_index()\n",
     "        del df_all_prop['index']\n",
     "        del df_all_prop[\"Unnamed: 0\"]\n",
+    "    \n",
+    "    # Removing the \"Other Properties row\" which was calculated earlier in the overview section\n",
     "    df_all_prop = df_all_prop[df_all_prop[\"Property_Label\"]!=\"Other Properties\"]\n",
     "    printmd(\"Top Ten Properties are \",'black',size=18)\n",
     "    display(HTML(df_all_prop[:10].to_html(index=False)))\n",
-    "    df_all_prop.to_csv(os.path.join(os.getenv('PROPERTY_OVERVIEW'),\"Top_Ten_Properties\"),sep='\\t')\n",
+    "    df_all_prop.to_csv(os.path.join(os.getenv('PROPERTY_OVERVIEW'),\"Top_Ten_Properties.tsv\"),sep='\\t')\n",
     "except Exception as e:\n",
     "    display(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -3930,7 +3960,7 @@
    "source": [
     "try:    \n",
     "    # Load the list of classes generated in the  9th cell\n",
-    "    df = pd.read_csv(os.path.join(os.getenv('PROPERTY_OVERVIEW'),\"Top_Ten_Properties\"),delimiter='\\t')\n",
+    "    df = pd.read_csv(os.path.join(os.getenv('PROPERTY_OVERVIEW'),\"Top_Ten_Properties.tsv\"),delimiter='\\t')\n",
     "    \n",
     "    # Load the Descriptions of the nodes of the subgraph in a Dataframe\n",
     "    df_description = pd.read_csv(os.path.join(os.getenv('WIKIDATA_PARTS'),os.getenv('description')),delimiter='\\t')\n",
@@ -3978,19 +4008,12 @@
     "        output_file_overview = subset_name + \"_\" + ele[\"Property_Label\"].replace(\" \",\"-\")+\"_overview\"+\".tsv\"\n",
     "        \n",
     "        # Save the overview to the output file\n",
-    "        property_overview.to_csv(os.path.join(os.getenv('OVERVIEW_FOLDER'),output_file_overview),sep='\\t')\n",
+    "        property_overview.to_csv(os.path.join(os.getenv('PROPERTY_OVERVIEW'),output_file_overview),sep='\\t')\n",
     "        \n",
     "        printmd(\"------------------------------------------------------------------------------------------\")\n",
     "except Exception as e:\n",
     "    display(e)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
