--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -1088,8 +1088,8 @@
    ]
   }
  ],
- "Metadata": {
-  "Kernelspec": {
+ "metadata": {
+  "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
