Add some newlines.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -50,10 +50,10 @@
     "temp_folder_path = wikidata_parts_path + '/temp'\n",
     "gzip_command = 'gzip'\n",
     "sort_extras = '-T ' + wikidata_parts_path\n",
-    "unsorted_extension = 'unsorted.tsv.gz'",
-    "sorted_extension = 'tsv.gz'",
-    "use_mgzip = 'False'",
-    "verbose = 'False'"
+    "unsorted_extension = 'unsorted.tsv.gz'\n",
+    "sorted_extension = 'tsv.gz'\n",
+    "use_mgzip = 'False'\n",
+    "verbose = 'False'\n"
    ]
   },
   {
